src/test/compile-fail/ext-nonexistent.rs

// error-pattern:unknown macro
fn main() {
  #iamnotanextensionthatexists("");
}